fix: transform  will  cause  some problem in Chrome / FireFox https://stackoverflow.com/questions/2637058/positions-fixed-doesnt-work-when-using-webkit-transform

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,7 +24,7 @@
   */
 .ptr__children,
 .ptr__pull-down {
-  transition: transform 0.2s cubic-bezier(0, 0, 0.31, 1);
+  transition: all 0.2s cubic-bezier(0, 0, 0.31, 1);
 }
 
 .ptr__pull-down {
